syntax = "proto3";

package payment;

option go_package = "github.com/1tsndre/mini-go-project/proto/payment";

service PaymentService {
  rpc ProcessPayment(ProcessPaymentRequest) returns (ProcessPaymentResponse);
  rpc GetPaymentStatus(GetPaymentStatusRequest) returns (GetPaymentStatusResponse);
}

message ProcessPaymentRequest {
  string order_id = 1;
  string amount = 2;
  string method = 3;
}

message ProcessPaymentResponse {
  bool success = 1;
  string payment_id = 2;
  string status = 3;
  string message = 4;
}

message GetPaymentStatusRequest {
  string order_id = 1;
}

message GetPaymentStatusResponse {
  string payment_id = 1;
  string order_id = 2;
  string status = 3;
  string amount = 4;
  string method = 5;
}
